# t-b

./: .gitignore  CLAUDE.md  pyproject.toml  run.sh  selftest.py
.claude/: settings.json
src/tui_browser/: __main__.py  app.py  engine.py  image_handler.py  renderer.py
